--- a/locales/locales.csv
+++ b/locales/locales.csv
@@ -161,7 +161,7 @@ validation,account_required,请输入账户名,Enter account name,
 validation,pwd_required,请输入密码,Enter password,
 validation,pwd_unmatched,两次输入的密码不一致,Password unmatched,
 validation,pwd_repeat,请再次输入密码,Enter password again,
-validation,account_not_exists,账户名或密码错误,Incorrect account name or password,
+validation,account_not_exists,密码错误,Incorrect account name or password,
 validation,account_too_short,账户名过短,Account name should be longer,
 validation,account_slash,账户名必须至少包含一个数字或横杠,Account name should contain at least one dash or a number,
 validation,account_slash_limit,账户名不能包含连续的横杠,Account name should not contain continuous dashes,
