优化样式显示

--- a/locales/en.json
+++ b/locales/en.json
@@ -61,7 +61,8 @@
     "important_notice": "Important Notice",
     "verify_code": "TAG",
     "deposit_account": "Deposit Account",
-    "jump_to_reg": "Sign In or <a href=\"javascript:jumpTo('{url}')\">Create a new account</a> to continue",
+    "jump_to_reg": "Sign In or {action} to continue",
+    "user_register": "Create a new account",
     "hello": "Hello",
     "transfer_detail": "Transfer details",
     "backup_wallet": "Take a Minute to Create a Backup",
@@ -259,8 +260,8 @@
   },
   "tooltip": {
     "generated": "<span>The generated password was created by your browser, locally.<br /><br /><strong>No one but you can access it.</strong><br /><br /> Please paste it below and save a copy in a safe place. </span>",
-    "balance_all": "<p>This is the estimated value of all your assets, including any hidden assets, open orders, debt and collateral.</p><p>Estimation is using only live blockchain data and may not be perfectly accurate.</p>",
-    "small_asset": "<p>Estimated total balance less than {smallAmount} CYB</p>",
+    "balance_all": "This is the estimated value of all your assets, including any hidden assets, open orders, debt and collateral.<br />Estimation is using only live blockchain data and may not be perfectly accurate.",
+    "small_asset": "Estimated total balance less than {smallAmount} CYB",
     "create_asset": "Click here to create and issue crypto assets",
     "memo_notice": "Please ensure your tag is correct!",
     "coin_age_desc": "Coin age is calculated based on the CYB in the CYBEX account. It is updated at UTC+00:00 every day.",
