--- a/locales/zh-cn.json
+++ b/locales/zh-cn.json
@@ -61,7 +61,8 @@
     "important_notice": "重要提示",
     "verify_code": "标签",
     "deposit_account": "充值帐户",
-    "jump_to_reg": "登录或 <a href=\"javascript:jumpTo('{url}')\">注册新账户</a> 即可开始交易",
+    "jump_to_reg": "登录或 {action} 即可开始交易",
+    "user_register": "注册新账户",
     "hello": "您好",
     "transfer_detail": "转账详情",
     "backup_wallet": "创建钱包备份",
@@ -259,8 +260,8 @@
   },
   "tooltip": {
     "generated": "<span>系统推荐密码由您的浏览器本地生成。<br /><br /><strong>只有您有此密码的获取权限。</strong><br /><br /> 此密码具备较高的安全强度，若需要使用该密码，可直接复制并粘贴到密码输入框，并务必备份好该密码。</span>",
-    "balance_all": "<p>这是你所有资产的估值，包含了在界面中设置了隐藏的资产、委单中的资产、债仓及抵押物。</p><p>估值采用实时获得的区块链上的价格，可能不那么精确。</p>",
-    "small_asset": "<p>估值小于{smallAmount}CYB的资产</p>",
+    "balance_all": "这是你所有资产的估值，包含了在界面中设置了隐藏的资产、委单中的资产、债仓及抵押物。\n估值采用实时获得的区块链上的价格，可能不那么精确。",
+    "small_asset": "估值小于{smallAmount}CYB的资产",
     "create_asset": "Cybex支持用户便捷的创建和发行资产，点此可进入相关页面",
     "memo_notice": "填写错误可能导致资产损失，请仔细核对",
     "coin_age_desc": "基于Cybex账户中的CYB持币历史情况，计算得出账户币龄，每天的UTC0点更新。",
