--- a/locales/en.json
+++ b/locales/en.json
@@ -332,8 +332,8 @@
     "no_found1_2": "Ooops!",
     "no_found2": "Page not found",
     "eos_notice": "Both a TAG and an Address are required to successfully deposit your {coinname} to Cybex",
-    "go_deposit_history": "After making a deposit, you can track its progress on the <a href=\"{url}\">D/W Record</a> page",
-    "go_withdraw_history": "After making a withdrawal, you can track its progress on the <a href=\"{url}\">D/W Record</a> page",
+    "go_deposit_history": "After making a deposit, you can track its progress on the {action} page",
+    "go_withdraw_history": "After making a withdrawal, you can track its progress on the {action} page",
     "deposit_paused": "{cointype} deposit disabled temporarily",
     "withdraw_paused": "{cointype} withdrawal disabled temporarily",
     "about": "Cybex Introduction",
