--- a/locales/zh-cn.json
+++ b/locales/zh-cn.json
@@ -332,8 +332,8 @@
     "no_found1_2": "哎呀!",
     "no_found2": "此页面不存在",
     "eos_notice": "请注意，标签和地址同时使用才能充值{coinname}到Cybex",
-    "go_deposit_history": "充值完成后，您可以在 <a href=\"{url}\">充提记录</a> 页面跟踪状态",
-    "go_withdraw_history": "提现完成后，您可以在 <a href=\"{url}\">充提记录</a> 页面跟踪状态",
+    "go_deposit_history": "充值完成后，您可以在 {action} 页面跟踪状态",
+    "go_withdraw_history": "提现完成后，您可以在 {action} 页面跟踪状态",
     "deposit_paused": "{cointype}当前禁用充值",
     "withdraw_paused": "{cointype}当前禁用提现",
     "about": "关于我们",
